# image_proccesor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
loadtest/: README.md  SUMMARY.md  report.html  tmp-body.json
loadtest/k6/: README.md  resize.js
php/: .dockerignore  .env.example  Dockerfile  README.md  api.php
rust/: README.md  docker-compose.yml
rust/src/: auth.rs  config.rs  error.rs
rust/src/handlers/: mod.rs
rust/src/services/: resizer.rs
src/: config.rs  main.rs  state.rs
src/handlers/: resize.rs
src/services/: downloader.rs  mod.rs
